# DRL_Robot_Path_Planning

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cyclonedds_config.xml
ros2_ws/hunter_se_validation_logs/: hunter_se_validation_20260501_094636.csv
ros2_ws/src/aws-robomaker-bookstore-world/: CMakeLists.txt
ros2_ws/src/aws-robomaker-bookstore-world/env-hooks/: aws_robomaker_bookstore_world.dsv.in
ros2_ws/src/aws-robomaker-bookstore-world/launch/: bookstore_ignition.launch.py
ros2_ws/src/aws-robomaker-bookstore-world/worlds/: bookstore_ignition.world
ros2_ws/src/aws-robomaker-hospital-world/: CMakeLists.txt  README.md
ros2_ws/src/aws-robomaker-hospital-world/env-hooks/: aws_robomaker_hospital_world.dsv.in
ros2_ws/src/aws-robomaker-hospital-world/launch/: hospital_ignition.launch.py
ros2_ws/src/aws-robomaker-hospital-world/worlds/: hospital_ignition.world
ros2_ws/src/aws-robomaker-small-house-world/: CMakeLists.txt
ros2_ws/src/aws-robomaker-small-house-world/env-hooks/: aws_robomaker_small_house_world.dsv.in
ros2_ws/src/aws-robomaker-small-house-world/launch/: small_house_ignition.launch.py
ros2_ws/src/aws-robomaker-small-house-world/worlds/: small_house_ignition.world
ros2_ws/src/aws-robomaker-small-warehouse-world/: CMakeLists.txt
ros2_ws/src/aws-robomaker-small-warehouse-world/env-hooks/: aws_robomaker_small_warehouse_world.dsv.in
ros2_ws/src/aws-robomaker-small-warehouse-world/launch/: small_warehouse_ignition.launch.py
ros2_ws/src/aws-robomaker-small-warehouse-world/worlds/no_roof_small_warehouse/: no_roof_small_warehouse_ignition.world
ros2_ws/src/aws-robomaker-small-warehouse-world/worlds/small_warehouse/: small_warehouse_ignition.world
ros2_ws/src/dataset_builder/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/dataset_builder/dataset_builder/: __init__.py
ros2_ws/src/dataset_builder/dataset_builder/configs/: run_defaults.yaml  topics.yaml
ros2_ws/src/dataset_builder/dataset_builder/nodes/: metadata_logger.py  run_manager.py
ros2_ws/src/dataset_builder/dataset_builder/utils/: paths.py  yaml_io.py
ros2_ws/src/dataset_builder/launch/: record_run.launch.py
ros2_ws/src/depth_d435/: README.md
ros2_ws/src/depth_d455/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/depth_d455/depth_d455/: __init__.py
ros2_ws/src/depth_d455/launch/: one_robot_ign_launch.py
ros2_ws/src/depth_d455/urdf/: sensors_diffbot.xacro
ros2_ws/src/drl_agent/: CMakeLists.txt  package.xml
ros2_ws/src/drl_agent/config/: environment.yaml  environment_curriculum.yaml  hyperparameters_sb3_ppo.yaml  hyperparameters_sb3_sac.yaml  hyperparameters_sb3_td3.yaml  hyperparameters_td7.yaml  obstacle_catalog.yaml  train_a3c_config.yaml  train_sb3_ppo_config.yaml  train_sb3_sac_config.yaml  train_sb3_td3_config.yaml  train_td7_config.yaml  train_tqc_config.yaml  train_tqc_curriculum_config.yaml
ros2_ws/src/drl_agent/launch/: drl_hunter_se.launch.py
ros2_ws/src/drl_agent/scripts/environment/: environment.py  environment_curriculum.py  environment_interface.py
ros2_ws/src/drl_agent/scripts/policy/: sb3_ppo_agent.py  sb3_sac_agent.py  sb3_td3_agent.py  test_td7_agent.py  test_tqc_agent.py  tqc_agent.py  train_a3c_agent.py  train_sac_agent.py  train_sb3_ppo_agent.py  train_sb3_sac_agent.py  train_sb3_td3_agent.py  train_td7_agent.py  train_tqc_agent.py  train_tqc_curriculum_agent.py  train_tqc_ieqn_agent.py
ros2_ws/src/drl_agent/scripts/utils/: buffer.py
ros2_ws/src/drl_agent_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/drl_agent_interfaces/msg/: DrlModelPoseArray.msg
ros2_ws/src/drl_agent_interfaces/srv/: GetDimensions.srv
ros2_ws/src/hunter_se_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/hunter_se_gazebo/config/: hunter_se_cmd_prefilter.yaml  ros2_gz_bridge_config.yaml  ros2_gz_bridge_empty_config.yaml
ros2_ws/src/hunter_se_gazebo/launch/: hunter_se_validation_empty.launch.py  keyboard_teleop_empty.launch.py  simulate_hunter_se_hunav_ignition.launch.py  simulate_hunter_se_ignition.launch.py
ros2_ws/src/hunter_se_gazebo/rviz/: model_display.rviz
ros2_ws/src/hunter_se_gazebo/scripts/: hunav_pose_csv_logger.py  hunter_se_cmd_prefilter.py  hunter_se_dynamics_monitor.py  hunter_se_mesh_extent.py  hunter_se_steering_monitor.py  hunter_se_teleop_key.py  hunter_se_validation_driver.py  hunter_se_validation_logger.py
ros2_ws/src/hunter_se_gazebo/urdf/: robot.urdf.xacro
ros2_ws/src/hunter_se_gazebo/urdf/mobile_robot/: hunter_se.gazebo  hunter_se.urdf.xacro  hunter_se_wheel.xacro
ros2_ws/src/hunter_se_gazebo/worlds/: drl_arena.world  empty.world
ros2_ws/src/hunter_se_unity/: Hunter SE - Random Obstacles.unity
ros2_ws/src/octomap_mapping/: README.md
ros2_ws/src/octomap_mapping/octomap_server/launch/: octomap_scout_ignition.launch.py
ros2_ws/src/octomap_mapping/octomap_server/params/: scout_ignition.yaml
ros2_ws/src/ouster_simulation/: README.md
ros2_ws/src/ouster_simulation/ouster_description/launch/: os1_32_alone.launch.py
ros2_ws/src/ouster_simulation/ouster_description/urdf/: os1_32.urdf.xacro  os1_64.urdf.xacro  os1_64_example.urdf.xacro
ros2_ws/src/ouster_simulation/ouster_description/worlds/: test.world
ros2_ws/src/scout_nav2/: README.md
ros2_ws/src/scout_nav2/agilex_scout/config/: ros2_gz_bridge_config.yaml  scout_mini_bridge_config.yaml
ros2_ws/src/scout_nav2/agilex_scout/launch/: simulate_control_gazebo_ignition.launch.py  simulate_control_gazebo_mini.launch.py  simulate_control_jetty_ignition.launch.py
ros2_ws/src/scout_nav2/agilex_scout/rviz/: model_mini_display.rviz
ros2_ws/src/scout_nav2/agilex_scout/urdf/mobile_robot/: scout_v2.gazebo  scout_v2.urdf.xacro
ros2_ws/src/ugv_gazebo_sim/: README.md
ros2_ws/src/ugv_gazebo_sim/bunker/: README.md
ros2_ws/src/ugv_gazebo_sim/bunker/bunker_description/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_gazebo_sim/bunker/bunker_description/rviz/: bunker.rviz
ros2_ws/src/ugv_gazebo_sim/bunker/bunker_gazebo_sim/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_gazebo_sim/scout/scout_description/: README.md
(+15 files in other folders)
