<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dataset_builder</name>
  <version>0.1.0</version>
  <description>Dataset builder for continuous robot data collection with rosbag2</description>
  <maintainer email="user@example.com">Dataset Builder</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 runtime deps -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_py</depend>

  <!-- Used in code: get_package_share_directory -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Launch file dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python runtime deps used by code (yaml, pytz) -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pytz</exec_depend>

  <!-- Optional: only keep if you actually import/use rosbag2_py in Python code -->
  <depend>rosbag2_py</depend>

  <!-- Optional: remove if unused in code -->
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
