<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_se_gazebo</name>
  <version>0.0.0</version>
  <description>
    URDF and Gazebo Ignition Fortress simulation package for the AgileX Hunter SE robot
    (sensor-free). Ackermann-steering (front-wheel steer, rear-wheel drive) UGV.
    Kinematics sourced from the Unity Hunter SE.prefab in hunter_se_unity/.
  </description>

  <maintainer email="user@example.com">SangukBae</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>aws_robomaker_hospital_world</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
